// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NeonPage NeonErrorPage 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      >
        <div
          class="css-om5qko-pageContent"
          data-selenium="neon-page.content"
        >
          <img
            alt="NEON Data Portal"
            class="css-1fhg076-errorPageLogo"
            title="NEON Data Portal"
          />
          <h1
            class="MuiTypography-root MuiTypography-h3 css-1yqqj6i-MuiTypography-root-pageTitle"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvywmc-MuiSvgIcon-root-errorPageTitleIcon"
              data-testid="WarningIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
              />
            </svg>
            Something broke.
          </h1>
          <div>
            <span
              class="MuiTypography-root MuiTypography-caption css-ucccu6-MuiTypography-root-errorPageCaption"
            >
              fail
            </span>
          </div>
          <div
            style="display: flex;"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-gy4oou-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-gz8usn-MuiButton-startIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="AutorenewIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 6v3l4-4-4-4v3c-4.42 0-8 3.58-8 8 0 1.57.46 3.03 1.24 4.26L6.7 14.8c-.45-.83-.7-1.79-.7-2.8 0-3.31 2.69-6 6-6m6.76 1.74L17.3 9.2c.44.84.7 1.79.7 2.8 0 3.31-2.69 6-6 6v-3l-4 4 4 4v-3c4.42 0 8-3.58 8-8 0-1.57-.46-3.03-1.24-4.26"
                  />
                </svg>
              </span>
              Reset and Try Again
            </button>
            <a
              class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-r0nuua-MuiButtonBase-root-MuiButton-root"
              href="/"
              style="margin-left: 32px;"
              tabindex="0"
            >
              <span
                class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-gz8usn-MuiButton-startIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="HomeIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                  />
                </svg>
              </span>
              Return Home
            </a>
          </div>
        </div>
        <input
          data-gtm="react-page-run-time-error.stack"
          type="hidden"
          value="Disregard; this is console.error() call is expected in the NeonErrorPage test"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
    >
      <div
        class="css-om5qko-pageContent"
        data-selenium="neon-page.content"
      >
        <img
          alt="NEON Data Portal"
          class="css-1fhg076-errorPageLogo"
          title="NEON Data Portal"
        />
        <h1
          class="MuiTypography-root MuiTypography-h3 css-1yqqj6i-MuiTypography-root-pageTitle"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-hvywmc-MuiSvgIcon-root-errorPageTitleIcon"
            data-testid="WarningIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
            />
          </svg>
          Something broke.
        </h1>
        <div>
          <span
            class="MuiTypography-root MuiTypography-caption css-ucccu6-MuiTypography-root-errorPageCaption"
          >
            fail
          </span>
        </div>
        <div
          style="display: flex;"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-gy4oou-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-gz8usn-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="AutorenewIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12 6v3l4-4-4-4v3c-4.42 0-8 3.58-8 8 0 1.57.46 3.03 1.24 4.26L6.7 14.8c-.45-.83-.7-1.79-.7-2.8 0-3.31 2.69-6 6-6m6.76 1.74L17.3 9.2c.44.84.7 1.79.7 2.8 0 3.31-2.69 6-6 6v-3l-4 4 4 4v-3c4.42 0 8-3.58 8-8 0-1.57-.46-3.03-1.24-4.26"
                />
              </svg>
            </span>
            Reset and Try Again
          </button>
          <a
            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorPrimary css-r0nuua-MuiButtonBase-root-MuiButton-root"
            href="/"
            style="margin-left: 32px;"
            tabindex="0"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-gz8usn-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="HomeIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
                />
              </svg>
            </span>
            Return Home
          </a>
        </div>
      </div>
      <input
        data-gtm="react-page-run-time-error.stack"
        type="hidden"
        value="Disregard; this is console.error() call is expected in the NeonErrorPage test"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders a basic functional page with no props 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Header
          </span>
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: 2000px;"
      >
        <div
          class="css-om5qko-pageContent"
          data-selenium="neon-page.content"
          style="top: 0px;"
        >
          <div>
            content
          </div>
        </div>
      </div>
      <footer>
        <div
          style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Footer
          </span>
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Header
        </span>
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: 2000px;"
    >
      <div
        class="css-om5qko-pageContent"
        data-selenium="neon-page.content"
        style="top: 0px;"
      >
        <div>
          content
        </div>
      </div>
    </div>
    <footer>
      <div
        style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Footer
        </span>
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders sidebar items as skeletons when in appropriate state 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Header
          </span>
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: calc(2000px - 348px);"
      >
        <div
          class="css-1ditpx5-sidebarContainer"
          style="width: 300px;"
        >
          <div>
            Sidebar
          </div>
        </div>
        <div
          class="css-17fvrha-pageContent"
          data-selenium="neon-page.content"
          style="top: 12px;"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-8csvkh-MuiSkeleton-root"
            style="width: 45%; height: 24px; margin: 16px 0px 32px 0px;"
          />
          <div>
            content
          </div>
        </div>
      </div>
      <footer>
        <div
          style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Footer
          </span>
        </div>
      </footer>
      <div
        data-component-path="@mui/material/Backdrop"
        data-prop-open="true"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-p43xbz-MuiPaper-root-backdropPaper"
          style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1b13zx-MuiTypography-root"
          >
            Loading
          </h3>
          <span
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-8b1t2c-MuiCircularProgress-root"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </span>
          <div
            class="css-fp67np-dismissOverlay"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1f4p0jd-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-10h02x8-MuiButton-startIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ClearIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              Dismiss
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Header
        </span>
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: calc(2000px - 348px);"
    >
      <div
        class="css-1ditpx5-sidebarContainer"
        style="width: 300px;"
      >
        <div>
          Sidebar
        </div>
      </div>
      <div
        class="css-17fvrha-pageContent"
        data-selenium="neon-page.content"
        style="top: 12px;"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-8csvkh-MuiSkeleton-root"
          style="width: 45%; height: 24px; margin: 16px 0px 32px 0px;"
        />
        <div>
          content
        </div>
      </div>
    </div>
    <footer>
      <div
        style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Footer
        </span>
      </div>
    </footer>
    <div
      data-component-path="@mui/material/Backdrop"
      data-prop-open="true"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-p43xbz-MuiPaper-root-backdropPaper"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <h3
          class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1b13zx-MuiTypography-root"
        >
          Loading
        </h3>
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-8b1t2c-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
        <div
          class="css-fp67np-dismissOverlay"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1f4p0jd-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-10h02x8-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="ClearIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            Dismiss
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders with a custom header/footer 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div>
          Header
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: 2000px;"
      >
        <div
          class="css-om5qko-pageContent"
          data-selenium="neon-page.content"
          style="top: 0px;"
        >
          <div>
            content
          </div>
        </div>
      </div>
      <footer>
        <div>
          Header
        </div>
      </footer>
      ,
    </div>
  </body>,
  "container": <div>
    <header>
      <div>
        Header
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: 2000px;"
    >
      <div
        class="css-om5qko-pageContent"
        data-selenium="neon-page.content"
        style="top: 0px;"
      >
        <div>
          content
        </div>
      </div>
    </div>
    <footer>
      <div>
        Header
      </div>
    </footer>
    ,
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders with a notification 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Header
          </span>
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: 2000px;"
      >
        <div
          class="css-om5qko-pageContent"
          data-selenium="neon-page.content"
          style="top: 0px;"
        >
          <div>
            content
          </div>
        </div>
      </div>
      <div
        data-component-path="@mui/material/Snackbar"
        data-prop-anchororigin="{"vertical":"bottom","horizontal":"right"}"
        data-prop-open="true"
        data-prop-slotprops="{"content":{"aria-describedby":"neon-data-portal-notifications"}}"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation6 MuiSnackbarContent-root css-b5lv4o-MuiPaper-root-MuiSnackbarContent-root-notification"
          role="alert"
          style="--Paper-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);"
        >
          <div
            class="MuiSnackbarContent-message css-ozrxnr-MuiSnackbarContent-message"
          >
            <div
              id="neon-data-portal-notifications"
            >
              <div>
                <div
                  class="css-1y840rg-notificationDiv"
                >
                  Notification
                </div>
                <hr
                  class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiSnackbarContent-action css-1po4j4v-MuiSnackbarContent-action"
          >
            <button
              aria-label="close"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-3qpppc-MuiButtonBase-root-MuiIconButton-root"
              tabindex="0"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="CloseIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <footer>
        <div
          style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Footer
          </span>
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Header
        </span>
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: 2000px;"
    >
      <div
        class="css-om5qko-pageContent"
        data-selenium="neon-page.content"
        style="top: 0px;"
      >
        <div>
          content
        </div>
      </div>
    </div>
    <div
      data-component-path="@mui/material/Snackbar"
      data-prop-anchororigin="{"vertical":"bottom","horizontal":"right"}"
      data-prop-open="true"
      data-prop-slotprops="{"content":{"aria-describedby":"neon-data-portal-notifications"}}"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation6 MuiSnackbarContent-root css-b5lv4o-MuiPaper-root-MuiSnackbarContent-root-notification"
        role="alert"
        style="--Paper-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiSnackbarContent-message css-ozrxnr-MuiSnackbarContent-message"
        >
          <div
            id="neon-data-portal-notifications"
          >
            <div>
              <div
                class="css-1y840rg-notificationDiv"
              >
                Notification
              </div>
              <hr
                class="MuiDivider-root MuiDivider-fullWidth css-1jpc804-MuiDivider-root"
              />
            </div>
          </div>
        </div>
        <div
          class="MuiSnackbarContent-action css-1po4j4v-MuiSnackbarContent-action"
        >
          <button
            aria-label="close"
            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-3qpppc-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
              data-testid="CloseIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <footer>
      <div
        style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Footer
        </span>
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders with a title and subtitle 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Header
          </span>
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: 2000px;"
      >
        <div
          class="css-om5qko-pageContent"
          data-selenium="neon-page.content"
          style="top: 0px;"
        >
          <h1
            class="MuiTypography-root MuiTypography-h3 css-1yqqj6i-MuiTypography-root-pageTitle"
            data-selenium="neon-page.title"
          >
            Title
          </h1>
          <p
            class="MuiTypography-root MuiTypography-subtitle1 css-1ni0965-MuiTypography-root-pageSubtitle"
            data-selenium="neon-page.subtitle"
          >
            Subtitle
          </p>
          <div>
            content
          </div>
        </div>
      </div>
      <footer>
        <div
          style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Footer
          </span>
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Header
        </span>
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: 2000px;"
    >
      <div
        class="css-om5qko-pageContent"
        data-selenium="neon-page.content"
        style="top: 0px;"
      >
        <h1
          class="MuiTypography-root MuiTypography-h3 css-1yqqj6i-MuiTypography-root-pageTitle"
          data-selenium="neon-page.title"
        >
          Title
        </h1>
        <p
          class="MuiTypography-root MuiTypography-subtitle1 css-1ni0965-MuiTypography-root-pageSubtitle"
          data-selenium="neon-page.subtitle"
        >
          Subtitle
        </p>
        <div>
          content
        </div>
      </div>
    </div>
    <footer>
      <div
        style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Footer
        </span>
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders with an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Header
          </span>
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: 2000px;"
      >
        <div
          class="css-om5qko-pageContent"
          data-selenium="neon-page.content"
          style="top: 0px;"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-8csvkh-MuiSkeleton-root"
            style="width: 45%; height: 24px; margin: 16px 0px 32px 0px;"
          />
          <div>
            content
          </div>
        </div>
      </div>
      <footer>
        <div
          style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Footer
          </span>
        </div>
      </footer>
      <div
        data-component-path="@mui/material/Backdrop"
        data-prop-open="true"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-p43xbz-MuiPaper-root-backdropPaper"
          style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeLarge css-ponwwo-MuiSvgIcon-root"
            data-testid="WarningIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
            />
          </svg>
          <h3
            class="MuiTypography-root MuiTypography-h5 css-lj9ldq-MuiTypography-root"
            style="margin-top: 8px;"
          >
            Fail
          </h3>
          <div
            class="css-fp67np-dismissOverlay"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1f4p0jd-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-10h02x8-MuiButton-startIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ClearIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              Dismiss
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Header
        </span>
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: 2000px;"
    >
      <div
        class="css-om5qko-pageContent"
        data-selenium="neon-page.content"
        style="top: 0px;"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-8csvkh-MuiSkeleton-root"
          style="width: 45%; height: 24px; margin: 16px 0px 32px 0px;"
        />
        <div>
          content
        </div>
      </div>
    </div>
    <footer>
      <div
        style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Footer
        </span>
      </div>
    </footer>
    <div
      data-component-path="@mui/material/Backdrop"
      data-prop-open="true"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-p43xbz-MuiPaper-root-backdropPaper"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-colorError MuiSvgIcon-fontSizeLarge css-ponwwo-MuiSvgIcon-root"
          data-testid="WarningIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M1 21h22L12 2zm12-3h-2v-2h2zm0-4h-2v-4h2z"
          />
        </svg>
        <h3
          class="MuiTypography-root MuiTypography-h5 css-lj9ldq-MuiTypography-root"
          style="margin-top: 8px;"
        >
          Fail
        </h3>
        <div
          class="css-fp67np-dismissOverlay"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1f4p0jd-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-10h02x8-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="ClearIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            Dismiss
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders with custom sidebar content 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Header
          </span>
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: calc(2000px - 348px);"
      >
        <div
          class="css-1ditpx5-sidebarContainer"
          style="width: 300px;"
        >
          <div>
            Sidebar
          </div>
        </div>
        <div
          class="css-17fvrha-pageContent"
          data-selenium="neon-page.content"
          style="top: 12px;"
        >
          <div>
            content
          </div>
        </div>
      </div>
      <footer>
        <div
          style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Footer
          </span>
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Header
        </span>
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: calc(2000px - 348px);"
    >
      <div
        class="css-1ditpx5-sidebarContainer"
        style="width: 300px;"
      >
        <div>
          Sidebar
        </div>
      </div>
      <div
        class="css-17fvrha-pageContent"
        data-selenium="neon-page.content"
        style="top: 12px;"
      >
        <div>
          content
        </div>
      </div>
    </div>
    <footer>
      <div
        style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Footer
        </span>
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders with loading message 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Header
          </span>
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: 3333px;"
      >
        <div
          class="css-om5qko-pageContent"
          data-selenium="neon-page.content"
          style="top: 0px;"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-8csvkh-MuiSkeleton-root"
            style="width: 45%; height: 24px; margin: 16px 0px 32px 0px;"
          />
          <div>
            content
          </div>
        </div>
      </div>
      <footer>
        <div
          style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Footer
          </span>
        </div>
      </footer>
      <div
        data-component-path="@mui/material/Backdrop"
        data-prop-open="true"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-p43xbz-MuiPaper-root-backdropPaper"
          style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1b13zx-MuiTypography-root"
          >
            Loading
          </h3>
          <span
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-8b1t2c-MuiCircularProgress-root"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </span>
          <div
            class="css-fp67np-dismissOverlay"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1f4p0jd-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-10h02x8-MuiButton-startIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ClearIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              Dismiss
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Header
        </span>
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: 3333px;"
    >
      <div
        class="css-om5qko-pageContent"
        data-selenium="neon-page.content"
        style="top: 0px;"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-8csvkh-MuiSkeleton-root"
          style="width: 45%; height: 24px; margin: 16px 0px 32px 0px;"
        />
        <div>
          content
        </div>
      </div>
    </div>
    <footer>
      <div
        style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Footer
        </span>
      </div>
    </footer>
    <div
      data-component-path="@mui/material/Backdrop"
      data-prop-open="true"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-p43xbz-MuiPaper-root-backdropPaper"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <h3
          class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1b13zx-MuiTypography-root"
        >
          Loading
        </h3>
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-8b1t2c-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
        <div
          class="css-fp67np-dismissOverlay"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1f4p0jd-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-10h02x8-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="ClearIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            Dismiss
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders with loading message and progress 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Header
          </span>
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: 2000px;"
      >
        <div
          class="css-om5qko-pageContent"
          data-selenium="neon-page.content"
          style="top: 0px;"
        >
          <span
            class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-8csvkh-MuiSkeleton-root"
            style="width: 45%; height: 24px; margin: 16px 0px 32px 0px;"
          />
          <div>
            content
          </div>
        </div>
      </div>
      <footer>
        <div
          style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Footer
          </span>
        </div>
      </footer>
      <div
        data-component-path="@mui/material/Backdrop"
        data-prop-open="true"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-p43xbz-MuiPaper-root-backdropPaper"
          style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
        >
          <h3
            class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1b13zx-MuiTypography-root"
          >
            Loading
          </h3>
          <span
            aria-valuenow="62"
            class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-kf1wwg-MuiCircularProgress-root"
            role="progressbar"
            style="width: 40px; height: 40px; transform: rotate(-90deg);"
          >
            <svg
              class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-eorpq6-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
                style="stroke-dasharray: 126.920; stroke-dashoffset: 48.230px;"
              />
            </svg>
          </span>
          <div
            class="css-fp67np-dismissOverlay"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1f4p0jd-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-10h02x8-MuiButton-startIcon"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                  data-testid="ClearIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              Dismiss
            </button>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Header
        </span>
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: 2000px;"
    >
      <div
        class="css-om5qko-pageContent"
        data-selenium="neon-page.content"
        style="top: 0px;"
      >
        <span
          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-8csvkh-MuiSkeleton-root"
          style="width: 45%; height: 24px; margin: 16px 0px 32px 0px;"
        />
        <div>
          content
        </div>
      </div>
    </div>
    <footer>
      <div
        style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Footer
        </span>
      </div>
    </footer>
    <div
      data-component-path="@mui/material/Backdrop"
      data-prop-open="true"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-p43xbz-MuiPaper-root-backdropPaper"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <h3
          class="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom css-1b13zx-MuiTypography-root"
        >
          Loading
        </h3>
        <span
          aria-valuenow="62"
          class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-kf1wwg-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px; transform: rotate(-90deg);"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-eorpq6-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
              style="stroke-dasharray: 126.920; stroke-dashoffset: 48.230px;"
            />
          </svg>
        </span>
        <div
          class="css-fp67np-dismissOverlay"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorPrimary css-1f4p0jd-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeSmall css-10h02x8-MuiButton-startIcon"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                data-testid="ClearIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            Dismiss
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders with sidebar links 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Header
          </span>
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: calc(2000px - 348px);"
      >
        <div
          class="css-1ditpx5-sidebarContainer"
          style="width: 300px;"
        >
          <div
            class="css-1quetxa-sidebarInnerStickyContainer neon__sidebar-sticky"
          >
            <div
              class="css-o33ds9-sidebarTitleContainer"
            >
              <div
                class="css-48dzrj-sidebarTitlesContainer"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 css-1cc8tn-MuiTypography-root-sidebarTitle"
                >
                  foo
                </h3>
                <h4
                  class="MuiTypography-root MuiTypography-subtitle2 css-fa4zaf-MuiTypography-root-sidebarSubtitle"
                >
                  bar
                </h4>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-5gej9c-MuiDivider-root-sidebarDivider"
              style="width: 236px;"
            />
            <div>
              More
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-5gej9c-MuiDivider-root-sidebarDivider"
              style="width: 236px;"
            />
            <div
              class="css-138p0hz-sidebarLinksContainer"
              style="max-height: 664px;"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ozgm7o-MuiTypography-root-MuiLink-root-sidebarLink-sidebarLinkCurrent"
                href="#"
              >
                Section A
              </a>
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gh4ovf-MuiTypography-root-MuiLink-root-sidebarLink"
                href="#sectionB"
              >
                Section B
              </a>
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gh4ovf-MuiTypography-root-MuiLink-root-sidebarLink"
                href="#sectionC"
              >
                <div>
                  stub icon
                </div>
                Section C
              </a>
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gh4ovf-MuiTypography-root-MuiLink-root-sidebarLink"
                href="#sectionD"
              >
                Section D
              </a>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-5gej9c-MuiDivider-root-sidebarDivider"
              style="margin-bottom: 0px; width: 236px;"
            />
          </div>
        </div>
        <div
          class="css-17fvrha-pageContent"
          data-selenium="neon-page.content"
          style="top: 12px;"
        >
          <div>
            content
          </div>
        </div>
      </div>
      <footer>
        <div
          style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Footer
          </span>
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Header
        </span>
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: calc(2000px - 348px);"
    >
      <div
        class="css-1ditpx5-sidebarContainer"
        style="width: 300px;"
      >
        <div
          class="css-1quetxa-sidebarInnerStickyContainer neon__sidebar-sticky"
        >
          <div
            class="css-o33ds9-sidebarTitleContainer"
          >
            <div
              class="css-48dzrj-sidebarTitlesContainer"
            >
              <h3
                class="MuiTypography-root MuiTypography-h5 css-1cc8tn-MuiTypography-root-sidebarTitle"
              >
                foo
              </h3>
              <h4
                class="MuiTypography-root MuiTypography-subtitle2 css-fa4zaf-MuiTypography-root-sidebarSubtitle"
              >
                bar
              </h4>
            </div>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-5gej9c-MuiDivider-root-sidebarDivider"
            style="width: 236px;"
          />
          <div>
            More
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-5gej9c-MuiDivider-root-sidebarDivider"
            style="width: 236px;"
          />
          <div
            class="css-138p0hz-sidebarLinksContainer"
            style="max-height: 664px;"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ozgm7o-MuiTypography-root-MuiLink-root-sidebarLink-sidebarLinkCurrent"
              href="#"
            >
              Section A
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gh4ovf-MuiTypography-root-MuiLink-root-sidebarLink"
              href="#sectionB"
            >
              Section B
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gh4ovf-MuiTypography-root-MuiLink-root-sidebarLink"
              href="#sectionC"
            >
              <div>
                stub icon
              </div>
              Section C
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-gh4ovf-MuiTypography-root-MuiLink-root-sidebarLink"
              href="#sectionD"
            >
              Section D
            </a>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-5gej9c-MuiDivider-root-sidebarDivider"
            style="margin-bottom: 0px; width: 236px;"
          />
        </div>
      </div>
      <div
        class="css-17fvrha-pageContent"
        data-selenium="neon-page.content"
        style="top: 12px;"
      >
        <div>
          content
        </div>
      </div>
    </div>
    <footer>
      <div
        style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Footer
        </span>
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`NeonPage renders with sidebar links as standlone children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header>
        <div
          style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Header
          </span>
        </div>
      </header>
      <div
        class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
        style="max-width: calc(2000px - 470px);"
      >
        <div
          class="css-1ditpx5-sidebarContainer sidebarClassName"
          style="width: 422px;"
        >
          <div>
            <div
              class="css-o33ds9-sidebarTitleContainer"
            />
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-5gej9c-MuiDivider-root-sidebarDivider"
              style="width: 358px;"
            />
            <div
              class="css-138p0hz-sidebarLinksContainer"
            >
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ozgm7o-MuiTypography-root-MuiLink-root-sidebarLink-sidebarLinkCurrent"
                href="#sectionA"
              >
                Section A
              </a>
              <a
                class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ozgm7o-MuiTypography-root-MuiLink-root-sidebarLink-sidebarLinkCurrent"
                href="#sectionA"
              >
                Section B
              </a>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-5gej9c-MuiDivider-root-sidebarDivider"
              style="margin-bottom: 0px; width: 358px;"
            />
          </div>
        </div>
        <div
          class="css-1c6c8yy-pageContent"
          data-selenium="neon-page.content"
          style="top: 12px;"
        >
          <h1
            class="MuiTypography-root MuiTypography-h3 css-1yqqj6i-MuiTypography-root-pageTitle"
            data-selenium="neon-page.title"
          >
            Section B
          </h1>
          <div>
            stub component B
          </div>
        </div>
      </div>
      <footer>
        <div
          style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
        >
          <span>
            Custom Footer
          </span>
        </div>
      </footer>
    </div>
  </body>,
  "container": <div>
    <header>
      <div
        style="background-color: green; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Header
        </span>
      </div>
    </header>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-1bvevnd-MuiContainer-root-outerPageContainer"
      style="max-width: calc(2000px - 470px);"
    >
      <div
        class="css-1ditpx5-sidebarContainer sidebarClassName"
        style="width: 422px;"
      >
        <div>
          <div
            class="css-o33ds9-sidebarTitleContainer"
          />
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-5gej9c-MuiDivider-root-sidebarDivider"
            style="width: 358px;"
          />
          <div
            class="css-138p0hz-sidebarLinksContainer"
          >
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ozgm7o-MuiTypography-root-MuiLink-root-sidebarLink-sidebarLinkCurrent"
              href="#sectionA"
            >
              Section A
            </a>
            <a
              class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ozgm7o-MuiTypography-root-MuiLink-root-sidebarLink-sidebarLinkCurrent"
              href="#sectionA"
            >
              Section B
            </a>
          </div>
          <hr
            class="MuiDivider-root MuiDivider-fullWidth css-5gej9c-MuiDivider-root-sidebarDivider"
            style="margin-bottom: 0px; width: 358px;"
          />
        </div>
      </div>
      <div
        class="css-1c6c8yy-pageContent"
        data-selenium="neon-page.content"
        style="top: 12px;"
      >
        <h1
          class="MuiTypography-root MuiTypography-h3 css-1yqqj6i-MuiTypography-root-pageTitle"
          data-selenium="neon-page.title"
        >
          Section B
        </h1>
        <div>
          stub component B
        </div>
      </div>
    </div>
    <footer>
      <div
        style="background-color: purple; width: 100%; height: 100px; font-size: 3rem; display: flex; align-items: center; justify-content: center;"
      >
        <span>
          Custom Footer
        </span>
      </div>
    </footer>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
